--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           <h2 class="sectionTitle">Portfolio</h2>
           <div class="sectionBody">
             <div class="micro">Companies we support</div>
-            A single line. Silver marks. Quiet confidence.
+            Coming Soon
           </div>
 <!--
           <div class="logoStrip">
