--- a/index.html
+++ b/index.html
@@ -346,6 +346,23 @@
       stroke: rgba(255,255,255,.80);
       stroke-width: 1.8;
     }
+    /* Profile image control */
+.profile-img-wrap{
+  width: 100%;
+  max-width: 320px;   /* maximum width */
+  height: 380px;      /* fixed height */
+  overflow: hidden;
+  border: 1px solid rgba(232,238,240,.12);
+  background: rgba(255,255,255,.02);
+  margin-bottom: 18px;
+}
+
+.profile-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;   /* crops nicely if image is large */
+  display:block;
+}
 
     @media (max-width: 980px){
       header{ position:static; }
@@ -372,7 +389,7 @@
         <a href="#team">Team</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#newsletter">Newsletter</a>
-        <a class="cta" href="https://calendly.com/your-link" target="_blank" rel="noreferrer">Book</a>
+        <a class="cta" href="https://calendly.com/austinpereira6602/15min" target="_blank" rel="noreferrer">Book</a>
         <a class="cta" href="https://your-form-link.com" target="_blank" rel="noreferrer">Students</a>
       </nav>
     </div>
@@ -476,6 +493,9 @@
 
           <div class="cards">
             <div class="card">
+              <div class="profile-img-wrap">
+                <img class="profile-img" src="assets/austin.jpg" alt="Austin Pereira">
+              </div>
               <h3>Austin Pereira, Co Founder</h3>
               <p>Growth, People Ops, Systems. <span style="color:rgba(232,238,240,.55)">[Links]</span></p>
             </div>
