--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           <div class="cards">
             <div class="card">
               <div class="profile-img-wrap">
-                <img class="profile-img" src="assets/austin.jpg" alt="Austin Pereira">
+                <img class="profile-img" src="assets/austin_pereira.jpg" alt="Austin Pereira">
               </div>
               <h3>Austin Pereira, Co Founder</h3>
               <p>Growth, People Ops, Systems. <span style="color:rgba(232,238,240,.55)">[Links]</span></p>
