--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       border-top: 1px solid rgba(232,238,240,.08);
       background:#000;
     }
-    section.alt{ background: var(--bg2); }
+    #team { background: #000; }
 
     .sectionGrid{
       display:grid;
@@ -348,6 +348,7 @@
     }
     /* Profile image control */
 .profile-img-wrap{
+  background: #000;
   width: 100%;
   max-width: 320px;   /* maximum width */
   height: 380px;      /* fixed height */
@@ -482,7 +483,7 @@
 
     <!-- TEAM -->
     <section id="team" class="alt">
-      <div class="blob e3" aria-hidden="true"></div>
+      
       <div class="wrap">
         <div class="sectionGrid">
           <h2 class="sectionTitle">Team</h2>
