--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 <img class="profile-img" src="assets/photo.png" alt="Austin Pereira">
               </div>
               <h3>Austin Pereira, Co Founder</h3>
-              <p>Growth, People Ops, Systems. <span style="color:rgba(232,238,240,.55)">[Links]</span></p>
+              <p>Growth, People Ops, Systems. <span style="color:rgba(232,238,240,.55)"></span></p>
             </div>
     
           </div>
