--- a/index.html
+++ b/index.html
@@ -281,7 +281,12 @@
       text-transform: uppercase;
       margin-bottom: 14px;
     }
-
+#principles{
+  background:
+    radial-gradient(900px 520px at 70% 25%, rgba(22,199,154,.18), transparent 60%),
+    radial-gradient(700px 420px at 15% 65%, rgba(14,167,122,.12), transparent 62%),
+    #000;
+}
     .cards{
       grid-column: 6 / -1;
       display:grid;
