--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
       overflow:hidden;
     }
 
+    #portfolio{
+  background:
+    radial-gradient(900px 520px at 75% 20%, rgba(207,214,220,.16), transparent 60%),
+    radial-gradient(700px 420px at 20% 70%, rgba(207,214,220,.10), transparent 65%),
+    linear-gradient(180deg, var(--ds-bg1) 0%, var(--ds-bg2) 100%);
+  border-top: 1px solid rgba(207,214,220,.10);
+}
     .heroArt{
       position:absolute;
       inset:0;
