--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
               <div class="profile-img-wrap">
                 <img class="profile-img" src="assets/photo.png" alt="Austin Pereira">
               </div>
-              <h3>Austin Pereira, Co Founder</h3>
+              <h3>Austin Pereira, Community Lead</h3>
               <p>Growth, People Ops, Systems.</p>
             </div>
           </div>
